--- a/CNA.ipynb
+++ b/CNA.ipynb
@@ -9,10 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importando librerias \n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -1931,7 +1932,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
