--- a/CNA.ipynb
+++ b/CNA.ipynb
@@ -22,10 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Cargando datos\n",
     "data = pd.read_csv(\"./dataset.csv\",delimiter=\";\")"
    ]
   },
