Agregando Insights a los graficos

--- a/CNA.ipynb
+++ b/CNA.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['MORA'] = np.where(data['NDIAS_ATRASADOS'] > data['DIAS'],1,0)"
+    "data['MORA'] = np.where(data['NDIAS_ATRASADOS'] > data['DIAS'],1,0)     #---Agregando la columna mora"
    ]
   },
   {
@@ -95,7 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def min_max_per_category(data, category_column, value_column, labels):\n",
+    "#Funcion para obtener el maximo y minimo valor por categoria\n",
+    "def min_max_per_category(data, category_column, value_column, labels): \n",
     "    result = []\n",
     "    for label in labels:\n",
     "        min_value = data.query(f\"{category_column} == {label}\")[value_column].min().round()\n",
@@ -128,27 +129,7 @@
     }
    ],
    "source": [
-    "data.TEA_INTERES.nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.2.1'"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.__version__"
+    "data.TEA_INTERES.nunique()      #--- Cantidad de valores unicos"
    ]
   },
   {
@@ -158,7 +139,7 @@
    "outputs": [],
    "source": [
     "labels = [i for i in range(0, 10)]\n",
-    "data['TEA_ANUAL'] = pd.qcut(data['TEA_INTERES'], 10, labels=labels)"
+    "data['TEA_ANUAL'] = pd.qcut(data['TEA_INTERES'], 10, labels=labels)     #--- Division del dataset en deciles"
    ]
   },
   {
@@ -275,7 +256,7 @@
     }
    ],
    "source": [
-    "data[['TEA_INTERES', 'TEA_ANUAL']]"
+    "data[['TEA_INTERES', 'TEA_ANUAL']]      #---Comparando datos clasificados"
    ]
   },
   {
@@ -284,13 +265,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "min_max_list = min_max_per_category(data, 'TEA_ANUAL', 'TEA_INTERES', labels)\n",
+    "min_max_list = min_max_per_category(data, 'TEA_ANUAL', 'TEA_INTERES', labels) #--- Llamar a la funcion para obtener el minimo y el maximo por categoria\n",
     "\n",
-    "# Crear un diccionario de mapeo de etiquetas a valores concatenados\n",
-    "label_to_min_max = dict(zip(labels, min_max_list))\n",
+    "label_to_min_max = dict(zip(labels, min_max_list))              #--- Crear un diccionario de mapeo de etiquetas a valores concatenados\n",
     "\n",
-    "# Asignar los valores concatenados a la columna TEA_ANUAL\n",
-    "data['TEA_ANUAL'] = data['TEA_ANUAL'].map(label_to_min_max)"
+    "data['TEA_ANUAL'] = data['TEA_ANUAL'].map(label_to_min_max)     #--- Asignar los valores concatenados a la columna TEA_ANUAL"
    ]
   },
   {
@@ -368,7 +347,7 @@
     }
    ],
    "source": [
-    "data[['TEA_INTERES', 'TEA_ANUAL']].sample(5)"
+    "data[['TEA_INTERES', 'TEA_ANUAL']].sample(5)        #--- Comprobando la clasificacion de los datos"
    ]
   },
   {
@@ -396,10 +375,8 @@
    "source": [
     "min_max_list = min_max_per_category(data, 'CUO_FIJA', 'CUOTA_FIJA', labels)\n",
     "\n",
-    "# Crear un diccionario de mapeo de etiquetas a valores concatenados\n",
     "label_to_min_max = dict(zip(labels, min_max_list))\n",
     "\n",
-    "# Asignar los valores concatenados a la columna TEA_ANUAL\n",
     "data['CUO_FIJA'] = data['CUO_FIJA'].map(label_to_min_max)"
    ]
   },
@@ -522,7 +499,7 @@
     }
    ],
    "source": [
-    "data.EDAD.describe()"
+    "data.EDAD.describe()        #--- Analisis descriptivo de la columna Edad dentro del dataset"
    ]
   },
   {
@@ -531,9 +508,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = ['18-25','25-35','35-45','45-55','55-65','65+']\n",
-    "bins = [18, 25, 35, 45, 55, 65, np.inf]\n",
-    "data['RANGO_EDAD'] = pd.cut(data['EDAD'], bins=bins, labels=labels, include_lowest=True)"
+    "labels = ['18-25','25-35','35-45','45-55','55-65','65+']            #--- Etiquetas de clasificación según el rango de edades                    \n",
+    "bins = [18, 25, 35, 45, 55, 65, np.inf]                             #--- Contenedores de rangos de edades\n",
+    "data['RANGO_EDAD'] = pd.cut(data['EDAD'], bins=bins, labels=labels, include_lowest=True) #--- Division del dataset en deciles"
    ]
   },
   {
@@ -646,7 +623,7 @@
     }
    ],
    "source": [
-    "data.NCUO_ATRASADAS.describe()"
+    "data.NCUO_ATRASADAS.describe()      #--- Descripcion de la columna NCUO_ATRASADAS"
    ]
   },
   {
@@ -708,7 +685,8 @@
     }
    ],
    "source": [
-    "sns.ecdfplot(data, x='NCUO_ATRASADAS', stat='percent')"
+    "#Grafico que muestra la variacion de las variables\n",
+    "sns.ecdfplot(data, x='NCUO_ATRASADAS', stat='percent')      "
    ]
   },
   {
@@ -728,9 +706,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[['NCUO_ATRASADAS', 'CUO_ATRASADAS']].sample(5)\n",
-    "data['CUO_ATRASADAS'] = data['CUO_ATRASADAS'].cat.add_categories(['0'])\n",
-    "data['CUO_ATRASADAS'] = data['CUO_ATRASADAS'].fillna('0')"
+    "# data[['NCUO_ATRASADAS', 'CUO_ATRASADAS']].sample(5)\n",
+    "data['CUO_ATRASADAS'] = data['CUO_ATRASADAS'].cat.add_categories(['0'])     #--- Agregar la categoria 0 faltante en la discretizacion\n",
+    "data['CUO_ATRASADAS'] = data['CUO_ATRASADAS'].fillna('0')                   #--- Rellenar datos faltantes con la nueva categoría"
    ]
   },
   {
@@ -808,7 +786,7 @@
     }
    ],
    "source": [
-    "data[['NCUO_ATRASADAS', 'CUO_ATRASADAS']].sample(5)"
+    "data[['NCUO_ATRASADAS', 'CUO_ATRASADAS']].sample(5)         #--- Verificacion de la clasificación"
    ]
   },
   {
@@ -868,7 +846,7 @@
     }
    ],
    "source": [
-    "data.CUO_FALTANTES_VIGENTES.describe()"
+    "data.CUO_FALTANTES_VIGENTES.describe()          #--- Descripcion de la columna CUO_FALTANTES_VIGENTES"
    ]
   },
   {
@@ -898,6 +876,7 @@
     }
    ],
    "source": [
+    "#Grafico que muestra la variacion de las variables\n",
     "sns.ecdfplot(data, x='CUO_FALTANTES_VIGENTES', stat='percent')"
    ]
   },
@@ -907,8 +886,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = [i for i in range(0, 7)]\n",
-    "data['CUO_FALTANTES'] = pd.qcut(data['CUO_FALTANTES_VIGENTES'], 7, labels=labels)"
+    "labels = [i for i in range(0, 7)]           #--- Creacion de etiquetas respecto al numero de categorias de la discretización\n",
+    "data['CUO_FALTANTES'] = pd.qcut(data['CUO_FALTANTES_VIGENTES'], 7, labels=labels)   #--- Creacion de los nuevos percentiles en vace a las nuevas categorías"
    ]
   },
   {
@@ -918,11 +897,7 @@
    "outputs": [],
    "source": [
     "min_max_list = min_max_per_category(data, 'CUO_FALTANTES', 'CUO_FALTANTES_VIGENTES', labels)\n",
-    "\n",
-    "# Crear un diccionario de mapeo de etiquetas a valores concatenados\n",
     "label_to_min_max = dict(zip(labels, min_max_list))\n",
-    "\n",
-    "# Asignar los valores concatenados a la columna TEA_ANUAL\n",
     "data['CUO_FALTANTES'] = data['CUO_FALTANTES'].map(label_to_min_max)"
    ]
   },
@@ -932,8 +907,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask = data['CUO_FALTANTES_VIGENTES'] != 0\n",
-    "data['CUO_FALTANTES'] = data.loc[mask, 'CUO_FALTANTES'].ffill()"
+    "mask = data['CUO_FALTANTES_VIGENTES'] != 0                          #--- Separar la clasificacion de 0-1 a 0 (Cancelado)\n",
+    "data['CUO_FALTANTES'] = data.loc[mask, 'CUO_FALTANTES'].ffill()     "
    ]
   },
   {
@@ -942,8 +917,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['CUO_FALTANTES'] = data['CUO_FALTANTES'].cat.add_categories(['0'])\n",
-    "data['CUO_FALTANTES'] = data['CUO_FALTANTES'].fillna('0')"
+    "data['CUO_FALTANTES'] = data['CUO_FALTANTES'].cat.add_categories(['0']) #--- Agregar la nueva categoría a la clasificación\n",
+    "data['CUO_FALTANTES'] = data['CUO_FALTANTES'].fillna('0')               #--- Rellenar los datos vacios con la nueva categoría"
    ]
   },
   {
@@ -981,7 +956,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.loc[data['CUO_FALTANTES'].isin(['2-6', '0-1']), 'CUO_FALTANTES'] = np.nan"
+    "data.loc[data['CUO_FALTANTES'].isin(['2-6', '0-1']), 'CUO_FALTANTES'] = np.nan     #--- Poner valores nulos en las columnas a unir"
    ]
   },
   {
@@ -1006,9 +981,9 @@
     }
    ],
    "source": [
-    "data['CUO_FALTANTES'] = data['CUO_FALTANTES'].cat.add_categories(['1-6'])\n",
-    "data['CUO_FALTANTES'] = data['CUO_FALTANTES'].fillna('1-6')\n",
-    "data['CUO_FALTANTES'].replace(['0-1', '2-6'], np.nan, inplace = True);"
+    "data['CUO_FALTANTES'] = data['CUO_FALTANTES'].cat.add_categories(['1-6'])   #--- Agregar nueva categoria\n",
+    "data['CUO_FALTANTES'] = data['CUO_FALTANTES'].fillna('1-6')                 #--- Rellenar los valores nulos, por la nueva categoría\n",
+    "data['CUO_FALTANTES'].replace(['0-1', '2-6'], np.nan, inplace = True);      #--- Eliminar las anteriores columnas"
    ]
   },
   {
@@ -1086,7 +1061,7 @@
     }
    ],
    "source": [
-    "data[['CUO_FALTANTES_VIGENTES', 'CUO_FALTANTES']].sample(5)"
+    "data[['CUO_FALTANTES_VIGENTES', 'CUO_FALTANTES']].sample(5)     #--- Verificar los datos discretizados"
    ]
   },
   {
@@ -2775,6 +2750,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Insights\n",
+    "- La mayoría de los valores de TEA_INTERES se concentran en el intervalo de 80.0-100.0, seguido de cerca por los intervalos 0.0-41.0 y 205.0-290.0, estos dos primeros tienen menor cantidad de socios que cayeron en default.\n",
+    "- Los prestamos con intervalos de 49-60, 60-80, 126-157, 290-500 de TEA_INTERES presentan una mayor cantidad de mora con respecto a creditos sin mora en el mismo intervalo.\n",
+    "- Como se muestra en grafico, ciertos rangos específicos de TEA_INTERES pueden estar asociados con un mayor riesgo de mora."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CUOTA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 143,
    "metadata": {},
@@ -2813,59 +2805,6 @@
    ],
    "source": [
     "data.CUOTA_FIJA.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 9734 entries, 0 to 9733\n",
-      "Data columns (total 30 columns):\n",
-      " #   Column                  Non-Null Count  Dtype \n",
-      "---  ------                  --------------  ----- \n",
-      " 0   SOCIO                   9734 non-null   object\n",
-      " 1   CUENTA                  9734 non-null   int64 \n",
-      " 2   AGENCIA                 9734 non-null   int64 \n",
-      " 3   TIPO_SOCIO              9734 non-null   int64 \n",
-      " 4   MONEDA                  9734 non-null   object\n",
-      " 5   PAGARE                  9734 non-null   object\n",
-      " 6   PRODUCTO                9734 non-null   object\n",
-      " 7   FEC_ULT_PAGO            9734 non-null   object\n",
-      " 8   DIAS                    9734 non-null   int64 \n",
-      " 9   NOM_FRECUENCIA          9734 non-null   object\n",
-      " 10  ESTADO_CIVIL            9734 non-null   object\n",
-      " 11  SEXO                    9734 non-null   object\n",
-      " 12  TIPO_VIVIENDA           9734 non-null   object\n",
-      " 13  OTORGA                  9734 non-null   object\n",
-      " 14  RIESGO_INDIVIDUAL       9734 non-null   object\n",
-      " 15  ANA_ORIGEN              9734 non-null   object\n",
-      " 16  ANA_ACTUAL              9734 non-null   object\n",
-      " 17  PROFESION               9734 non-null   object\n",
-      " 18  OCUPACION               9336 non-null   object\n",
-      " 19  ACTIVIDAD_ECO           9734 non-null   object\n",
-      " 20  MORA                    9734 non-null   int32 \n",
-      " 21  TEA_INTERES             9734 non-null   object\n",
-      " 22  CUOTA_FIJA              9734 non-null   object\n",
-      " 23  EDAD                    9734 non-null   object\n",
-      " 24  NCUO_ATRASADAS          9734 non-null   object\n",
-      " 25  CUO_FALTANTES_VIGENTES  9734 non-null   object\n",
-      " 26  NDIAS_ATRASADOS         9734 non-null   object\n",
-      " 27  MONTO_PRESTAMO          9734 non-null   object\n",
-      " 28  SALDO_PRESTAMO          9734 non-null   object\n",
-      " 29  IS_REPRO                9734 non-null   int64 \n",
-      "dtypes: int32(1), int64(5), object(24)\n",
-      "memory usage: 2.5+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "data.info()"
    ]
   },
   {
@@ -2921,6 +2860,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### INSIGHTS\n",
+    "- Se puede observar en el gráfico que a medida que el valor de la COUTA_FIJA aumenta, el porcentaje de morosidad disminuye en general.\n",
+    "- En los intervalos más bajos de CUOTA_FIJA (0.0-20.0 a 78.0-100.0), la proporción de MORA = 1 es relativamente alta en comparación con los intervalos más altos. Esto sugiere que las cuotas fijas más bajas podrían estar asociadas con un mayor riesgo de mora."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### NCUO_ATRASADAS"
    ]
   },
@@ -2951,6 +2899,15 @@
    "source": [
     "x = sns.countplot(data, x='NCUO_ATRASADAS', hue='MORA',order=sorted(data['NCUO_ATRASADAS'].unique()))\n",
     "x.set_xticklabels(x.get_xticklabels(), rotation=90);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### INSIGHTS\n",
+    "- Se puede observar la cantidad de cuotas atrasadas es minima en comparacion a prestamos que presentan cuotas atrasadas.\n",
+    "- Según el grafico tambien podemos percibir que conforme aumenta el numero de cuotas atrasadas, tambien lo hace la mora."
    ]
   },
   {
@@ -3006,6 +2963,15 @@
    ],
    "source": [
     "x = sns.countplot(data, x='CUO_FALTANTES_VIGENTES', hue='MORA',order=ordenar(list(set(data['CUO_FALTANTES_VIGENTES'].unique()))))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### INSIGHTS\n",
+    "- Segun el grafico en el rango (1-34) se puede inferir que segun el numero de cuotas faltantes disminuye, el riesgo de mora aumenta.\n",
+    "- Podemos observas que en el rango de 35-60 cuotas faltantes, el riesgo de mora aumenta significativamente respecto a las demas categorias, esto puede indicar que dentro de esta categoria hay un alto porcentaje de prestamos que dejan de ser pagados o existe atrasos en sus pagos."
    ]
   },
   {
@@ -3069,6 +3035,14 @@
    "source": [
     "x = sns.countplot(data, x='NDIAS_ATRASADOS', hue='MORA',order=sorted(data['NDIAS_ATRASADOS'].unique()))\n",
     "x.set_xticklabels(x.get_xticklabels(), rotation=90);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### INSIGHTS\n",
+    "- Del grafico podemos deducir que el NDIAS_ATRASADOS influye en la MORA directamente en la mora."
    ]
   },
   {
@@ -3147,6 +3121,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### INSIGHTS\n",
+    "- Algunos intervalos específicos, como 1510.0-2000.0 y 2210.0-2290.0, muestran una proporción relativamente alta de mora, indicando que los préstamos en estos rangos tienen un mayor riesgo.\n",
+    "- En los intervalos más altos de MONTO_PRESTAMO (7001.0-10120.0 y 20001.0-45000.0), la proporción de observaciones con mora es relativamente baja. Esto sugiere que los préstamos de montos muy altos tienden a ser pagados con mayor regularidad.\n",
+    "- Los intervalos de 1135.0-1510.0 y 2000.0-2200.0 muestran una proporción relativamente alta de mora. Esto indica que los préstamos dentro de estos rangos pueden estar asociados con un mayor riesgo de mora. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### SALDO_PRESTAMO"
    ]
   },
@@ -3207,6 +3191,14 @@
    "source": [
     "x = sns.countplot(data, x='SALDO_PRESTAMO', hue='MORA',order = ordenar(list(set(data['SALDO_PRESTAMO'].unique()))))\n",
     "x.set_xticklabels(x.get_xticklabels(), rotation=90);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### INSIGHTS\n",
+    "- La distribucion de saldo prestamo muestra que a medida que el saldo prestamo disminuye, el riesgo de mora aumenta, esto podría deberse a los prestamos de montos bajos que presentan un mayor indice de morosidad o bien a que algunos prestamos se atrasan en las ultimas cuotas\n"
    ]
   }
  ],
